Fix alignment of radio and checkbox inputs

--- a/assets/css/src/_components.settings-field.scss
+++ b/assets/css/src/_components.settings-field.scss
@@ -68,7 +68,6 @@
 
 		input {
 			flex: 0 0 25px;
-			margin: 0 $wpbr-space-half 0 0;
 
 			@media ( min-width: 783px ) {
 				flex: 0 0 16px;
